@@ -1,3 +1,11 @@
+Mon Sep 23 08:17:28 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/odbc.c: fix core by DataManager
+	* src/server/Makefile.am: distribute even server.h
+	* freetds.spec.in:
+	- add doc package for userguide
+	- add *.la files to rpm
+	- split ODBC driver to unixodbc package
+
 Mon Sep 23 00:06:36 EDT 2002	nsc <Nicholas_Castellano@acml.com>
 	* include/replacements.h.in:
 	- Include stdarg.h in replacements.h so we don't choke on the
